tests/func/parsing/error_reporting/test_parsing_errors_ambiguous_glr.err
1:10: syntax error: unexpected token 
    1 | 1 + 2 * 3 / 5
      |           ^^^ expected: * +